// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`canonical config snapshots > matches the recorded manifest for 01-next-tailwind-siblings-npm 1`] = `
"demo/demo-web/.gitignore  d44656612f08
demo/demo-web/README.md  6e702151e4b4
demo/demo-web/next.config.ts  eb339f94d0df
demo/demo-web/package.json  b41890a4204a
demo/demo-web/postcss.config.mjs  a0247228772d
demo/demo-web/src/app/globals.css  11b8e69e89a3
demo/demo-web/src/app/layout.tsx  facb3c7c80fb
demo/demo-web/src/app/page.tsx  2f8898a70fa0
demo/demo-web/src/components/Hello.tsx  17bc8873505a
demo/demo-web/tsconfig.json  b826fe242b9d"
`;

exports[`canonical config snapshots > matches the recorded manifest for 02-next-prisma-postgres-docker-pnpm 1`] = `
"demo/demo-web/.dockerignore  02c611cb82f9
demo/demo-web/.env  388021020131
demo/demo-web/.env.example  6d7547d359d5
demo/demo-web/.gitignore  e794b616b5a7
demo/demo-web/Dockerfile  ac2a399fccd9
demo/demo-web/README.md  0f7f376c2b30
demo/demo-web/next.config.ts  eb339f94d0df
demo/demo-web/package.json  c5dbf67bf2e7
demo/demo-web/postcss.config.mjs  a0247228772d
demo/demo-web/prisma/schema.prisma  e6b97fc64e04
demo/demo-web/src/app/globals.css  11b8e69e89a3
demo/demo-web/src/app/layout.tsx  facb3c7c80fb
demo/demo-web/src/app/page.tsx  2f8898a70fa0
demo/demo-web/src/components/Hello.tsx  17bc8873505a
demo/demo-web/src/lib/db.ts  95eb43fc6212
demo/demo-web/tsconfig.json  b826fe242b9d
demo/docker-compose.yml  cdd372668d15"
`;

exports[`canonical config snapshots > matches the recorded manifest for 09-next-minimal-npm 1`] = `
"demo/demo-web/.gitignore  d44656612f08
demo/demo-web/README.md  6e702151e4b4
demo/demo-web/next.config.ts  eb339f94d0df
demo/demo-web/package.json  9c13f31e5444
demo/demo-web/src/app/layout.tsx  97ef49c4fdfd
demo/demo-web/src/app/page.tsx  2f8898a70fa0
demo/demo-web/src/components/Hello.tsx  17bc8873505a
demo/demo-web/tsconfig.json  b826fe242b9d"
`;

exports[`canonical config snapshots > matches the recorded manifest for 10-next-feature-based-npm 1`] = `
"demo/demo-web/.dockerignore  02c611cb82f9
demo/demo-web/.env  388021020131
demo/demo-web/.env.example  6d7547d359d5
demo/demo-web/.gitignore  e794b616b5a7
demo/demo-web/Dockerfile  79b07abf9f8c
demo/demo-web/README.md  a23da4889c26
demo/demo-web/next.config.ts  eb339f94d0df
demo/demo-web/package.json  c5dbf67bf2e7
demo/demo-web/postcss.config.mjs  a0247228772d
demo/demo-web/prisma/schema.prisma  e6b97fc64e04
demo/demo-web/src/app/globals.css  11b8e69e89a3
demo/demo-web/src/app/layout.tsx  facb3c7c80fb
demo/demo-web/src/app/page.tsx  781a1dd86547
demo/demo-web/src/features/hello/Hello.tsx  17bc8873505a
demo/demo-web/src/lib/db.ts  95eb43fc6212
demo/demo-web/tsconfig.json  b826fe242b9d
demo/docker-compose.yml  cdd372668d15"
`;
